# fulcrum-gateway

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  TRIAGE.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  conventional-revert-check.yml  operator-qa.yml  publish.yml  release-please.yml  security.yml
ax_cli/: a2a_client.py  agent_manifests.py  agent_settings_profiles.py  client.py  config.py  gateway.py  gateway_assets.py  gateway_constants.py  gateway_daemon.py  gateway_entries.py  gateway_governance.py  gateway_health.py  gateway_hermes.py  gateway_identity.py  gateway_runtime.py  gateway_runtime_types.py  gateway_state.py  gateway_storage.py  main.py  manifest_template_library.py  offline_client.py  offline_sse.py  output.py  token_cache.py
ax_cli/audit/: __init__.py  export.py  formats.py  redact.py  verify.py
channel/: README.md
docs/: HANDOFF-hermes-plugin.md  README.md  SETUP-HERMES.md  agent-authentication.md  agent-manifests.md  agent-permission-model.md  ax-cli-cookbook.md  composio-integration.md  credential-security.md  demo-langgraph-composio-agent.md  demo-outbound-connectors.md  gateway-agent-runtimes.md  how-agents-work.md  login-e2e-runbook.md  offline-development.md
examples/: echo_agent.py
scripts/: channel_smoke.py  operator_qa_ci.py
tests/: gateway_cmd_testlib.py  test_a2a_client.py  test_agent_manifests.py  test_agent_settings_profiles.py  test_agents_profiles_commands.py  test_agents_test_invoking_principal.py  test_audit_export.py  test_audit_verify.py  test_auth_commands.py  test_auth_doctor_two_sources.py  test_ax_adapter_activity.py  test_ax_adapter_approval_routing.py  test_bootstrap_agent.py  test_channel.py  test_claude_cli_verbose.py  test_cli_python_version_guard.py  test_client.py  test_config.py  test_connectors_activity.py  test_connectors_auth.py  test_connectors_cli.py  test_connectors_composio_adapter.py  test_connectors_composio_intent.py  test_connectors_dispatch.py  test_connectors_filtering.py  test_connectors_registry.py  test_demo_script_contracts.py  test_gateway_agents_cmds.py  test_gateway_agents_commands.py  test_gateway_auth_cmds.py  test_gateway_autogen_template.py  test_gateway_commands.py  test_gateway_commands_ext.py  test_gateway_commands_ext2.py  test_gateway_connectors_tools_search.py  test_gateway_core_cmds.py  test_gateway_daemon_cmd_cmds.py  test_gateway_daemon_commands.py  test_gateway_diagnostics_cmds.py  test_gateway_helpers.py  (+50 more)
(+150 files in other folders)
