[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axctl"
version = "0.6.0"
description = "aX Gateway — local agent registry, runtime supervision, and CLI tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "aX Platform", email = "hello@paxai.app" },
]
keywords = ["ai", "agents", "cli", "multi-agent", "agentic", "ax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Communications",
]
dependencies = [
    "typer>=0.25.1,<0.26",
    "httpx>=0.25",
    "rich>=13.0",
    "pyyaml>=6.0.3",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://paxai.app"
Repository = "https://github.com/ax-platform/ax-gateway"
Documentation = "https://github.com/ax-platform/ax-gateway#readme"

[project.scripts]
axctl = "ax_cli.main:main"
ax = "ax_cli.main:main"

[project.optional-dependencies]
dev = [
    "build>=1.5.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "twine>=6.2.0",
]
mistral = [
    "mistralai>=2.0,<3.0",
]
mcp = [
    # Gates the report_gen MCP server's SQL AST safety layer. svg_viz has no
    # runtime deps beyond stdlib. See ax_cli/runtimes/mcp_servers/README.md.
    "sqlglot>=22.0",
]
mcp-postgres = [
    # Postgres backend for report_gen. Default backend is SQLite (zero deps);
    # only install this extra if you set AX_REPORT_GEN_DB_KIND=postgres.
    "sqlglot>=22.0",
    "psycopg[binary]>=3.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-p", "no:pytest_postgresql"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["ax_cli/runtimes/hermes"]  # Vendored runtime — see ax_cli/runtimes/hermes/README.md

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line length handled by formatter, not linter

[tool.setuptools.packages.find]
include = ["ax_cli*"]

[tool.setuptools.package-data]
ax_cli = [
    "static/*.html",
    "plugins/platforms/ax/*.yaml",
    "plugins/platforms/ax/*.md",
    "manifest_templates/*.toml",
    "agent_profiles/**/*.json",
]
